minor toolbar spacing fix

--- a/hexo/themes/landscape/source/css/_partial/header.styl
+++ b/hexo/themes/landscape/source/css/_partial/header.styl
@@ -22,7 +22,7 @@
 #header-inner
   position: fixed
   overflow: hidden
-  padding: 2vh 1vw
+  padding: 2vh 3vw
   height: 6vh
   background-color: hsl(280, 57%, 97%)
   right: 0
